--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,19 @@ targetCompatibility = 1.7
 
 ext {
     libraries = [
-            // Compile dependencies...
-            'commons-lang3':['org.apache.commons:commons-lang3:3.1'],
-            'httpclient':['org.apache.httpcomponents:httpclient:4.2.2'],
-            'mustache':['com.github.spullara.mustache.java:compiler:0.8.12'],
-            'paranamer':['com.thoughtworks.paranamer:paranamer:2.5.2'],
-            'swagger-jaxrs':['com.wordnik:swagger-jaxrs_2.10:1.3.2'],
-            'swagger-jersey-jaxrs':['com.wordnik:swagger-jersey-jaxrs_2.10:1.3.2'],
-            'reflections':['org.reflections:reflections:0.9.9-RC1'],
-            'commons-io':['commons-io:commons-io:2.0.1'],
-            'slf4j':['org.slf4j:slf4j-api:1.7.2'],
-            'rs-api':['javax.ws.rs:javax.ws.rs-api:2.0'],
-            'logback':['ch.qos.logback:logback-classic:1.0.13'],
-            'junit':['junit:junit:4.11'],
+        // Compile dependencies...
+        'commons-lang3':['org.apache.commons:commons-lang3:3.+'],
+        'httpclient':['org.apache.httpcomponents:httpclient:4.+'],
+        'mustache':['com.github.spullara.mustache.java:compiler:0.+'],
+        'paranamer':['com.thoughtworks.paranamer:paranamer:2.+'],
+        'swagger-jaxrs':['com.wordnik:swagger-jaxrs_2.10:1.+'],
+        'swagger-jersey-jaxrs':['com.wordnik:swagger-jersey-jaxrs_2.10:1.+'],
+        'reflections':['org.reflections:reflections:0.9.9-RC1'],
+        'commons-io':['commons-io:commons-io:2.+'],
+        'slf4j':['org.slf4j:slf4j-api:1.7.+'],
+        'rs-api':['javax.ws.rs:javax.ws.rs-api:2.+'],
+        'logback':['ch.qos.logback:logback-classic:1.+'],
+        'junit':['junit:junit:4.+'],
     ]
 }
 
